trunk/Archive2/8d/80373ebd596c61/output
main.cpp:65:7: error: no member named 'do_stuff' in 'rename'
    b.do_stuff();
    ~ ^
1 error generated.
